GWT Events  - Event Filter    - add Not Approved events mode    - Awaiting Events, Awaiting My Approval do not include past meetings    - added ability to include (special) events from other sessions (All Sessions toggle)      - outside of the session events are only visible on List of Events and List of Meetings and they cannot be approved, rejected, or edited      - date, time, location, and approval is displayed in gray (like in past events)    - Empty filter was not remembered (refresh did reset the filter back to "My Events")  - Approval   - can approve right corrected (event manager must manage the room to be able to approve / reject)   - List of Events / Meetings no longer allows approve / reject / inquire all (with no selection)  - Event Edit   - new meetings that are going to be approved are marked "new approval"   - deleted meetings are visible, but marked as "deleted meeting"   - fixed a conflicting problem when a new meeting is overlapping with a deleted one   - add event: time & room selection was not properly reset

--- a/branches/dev_events/WebContent/styles/unitime.css
+++ b/branches/dev_events/WebContent/styles/unitime.css
@@ -2159,10 +2159,25 @@ div.gwt-MenuBarPopup {
 	color: blue;
 }
 
+.unitime-EventMeetings .new-approved-meeting {
+	font-style: italic;
+	color: green;
+}
+
 .unitime-EventMeetings .conflict-row {
 	font-style: italic;
 	background-color: #FFD7D7;
 	vertical-align: top;
+}
+
+.unitime-EventMeetings .deleted-row {
+	font-style: italic;
+	color: gray;
+}
+
+.unitime-EventMeetings .deleted-meeting {
+	font-style: italic;
+	color: gray;
 }
 
 .unitime-EventMeetings .indent {
